# ML-Algorithms-from-Scratch

./: main.py  pyproject.toml  requirements.txt
supervised learning/: linear_regression.py  regularizaton.py
